src/discoveryTool/css/DiscoveryTool.css
/* Discovery Tool styling */

@font-face {
    font-family: "OpenSans";
    src: url("../../shared/lib/infusion/lib/fonts/OpenSans-Light.ttf");
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'OpenSans';
    src:url('../../shared/lib/infusion/lib/fonts/OpenSans-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'OpenSans';
    src:url('../../shared/lib/infusion/lib/fonts/OpenSans-Semibold.ttf');
    font-weight: 600;
    font-style: normal;
}

/* General */
@font-face {
    font-family: 'DiscoveryToolIcons';
    src:url('../fonts/GPII-DiscoveryTool.eot?#iefix') format('embedded-opentype'),
         url('../fonts/GPII-DiscoveryTool.eot'),
         url('../fonts/GPII-DiscoveryTool.ttf');
}

.fl-uiOptions-discoveryTool {
    background-color: #6f7b80;
    overflow: hidden;
}

.fl-uiOptions-discoveryTool .fl-uiOptions {
    font-family: 'OpenSans',"Myriad Pro", Helvetica, Arial, sans-serif;
    padding-top: 2em;
}

/* Panels */
.fl-uiOptions-discoveryTool .fl-uiOptions-panels {
    text-align: center;
    margin: 0;
}

.fl-uiOptions-discoveryTool .fl-uiOptions-panels li.fl-uiOptions-panel {
    display: inline-block;
    width: 10em;
    margin: 0 1em 0 0;
    padding:0;
    color: #fff;
    vertical-align: middle;
    height: 13em;
}

/* Labels */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel label {
    border: none;
    box-shadow: none;  
    text-transform: lowercase;  
    color: #ffffff;
    display: block;
    font-size: 1.4em;
    position:relative;
    cursor: pointer;
    line-height: 1.2;
}

/* Panel states */

/* Preference set hover */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel label .fl-discoveryTool-panel-icon:hover { box-shadow: 3px 3px 1px #4f4f4f;}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel label:hover .fl-icon-text,
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus ~ label .fl-icon-text { text-shadow: 2px 2px #4f4f4f; }

/* Preference set enabled / checked. */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked + label .fl-discoveryTool-panel-icon {
    background-color: #ffcc00;
}

/* Preference set focused - icon*/
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label .fl-discoveryTool-panel-icon {
	border: 3px solid #ffcc00;
}

.fl-uiOptions-discoveryTool .fl-uiOptions-panel .fl-icon-check {
    visibility: hidden;
    background-color: #363c40;
    color: #fff;
    border-radius: 1em;
    height: 1.1em;
    width: 1.1em;
    font-size: 1.2em;
    margin-left: 4.6em;
    display: inline-block;
    position:relative;
    top: -0.6em;
}

.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked + label div.fl-icon-check {
    visibility: visible;
}


/* Try something new */
.fl-uiOptions-discoveryTool .fl-uiOptions-panels li.fl-uiOptions-panel .fl-discoveryTool-try {
    color: #ffcc00;
    font-size: 1.2em;
    width: 6.7em;
    height: 6.7em;
    border-radius: 0.4em;
}

.fl-uiOptions-discoveryTool .fl-uiOptions-panels li.fl-uiOptions-panel .fl-discoveryTool-try:hover {
	background-color: #363C3F;
}

/* Font Icons */
.fl-icon-arrow, .fl-icon-check {
    font-family: 'DiscoveryToolIcons';
}

.fl-icon-arrow:after {
    content: "\e019";
    color: #C8CCCE;
}

.fl-icon-check:before {
	font-size: 0.4em;
    content: "\e018";
    position: relative;
    bottom:0.6em;
}

.fl-discoveryTool-checkbox {
    border: 0 none;
    clip: rect(0px, 0px, 0px, 0px);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.fl-icon-text {
	position:relative;
	top: -0.6em; /* shift text up since Checkmark icon is shifted upward. */
}

.fl-discoveryTool-panel-icon{
	font-family: 'DiscoveryToolIcons';
	font-size: 4.6em;
   	width: 1.2em;
    height: 1.2em;
    background-color: #F2F2F2;
    border: 3px solid #fff;
    border-radius: 0.08em;
    cursor: pointer;
    display:block;
    margin: 0 auto;
}

.fl-discoveryTool-panel-icon:before{
	position:relative;
	left: 0.1em;
	color: #fff;
}

.fl-discoveryTool-panel-icon:after{
	color: #333;
	position: relative;
	left: -0.9em;
}

/* Preference Set Icons */
.fl-discoveryTool-icon-high-contrast:before       {content: "\e00a";}
.fl-discoveryTool-icon-high-contrast:after        {content: "\e016";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-high-contrast:before, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-high-contrast:before, /* applied when focused and checked*/
.fl-discoveryTool-icon-high-contrast:hover:before {content: "\e004";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-high-contrast:after, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-high-contrast:after, /* applied when focused and checked*/
.fl-discoveryTool-icon-high-contrast:hover:after  {content: "\e010";}

.fl-discoveryTool-icon-low-contrast:before       {content: "\e006";}
.fl-discoveryTool-icon-low-contrast:after        {content: "\e012";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-low-contrast:before, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-low-contrast:before, /* applied when focused and checked*/
.fl-discoveryTool-icon-low-contrast:hover:before {content: "\e003";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-low-contrast:after, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-low-contrast:after, /* applied when focused and checked*/
.fl-discoveryTool-icon-low-contrast:hover:after  {content: "\e00f";}

.fl-discoveryTool-icon-simplify:before       {content: "\e009";}
.fl-discoveryTool-icon-simplify:after        {content: "\e015";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-simplify:before, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-simplify:before, /* applied when focused and checked*/
.fl-discoveryTool-icon-simplify:hover:before {content: "\e002";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-simplify:after, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-simplify:after, /* applied when focused and checked*/
.fl-discoveryTool-icon-simplify:hover:after  {content: "\e00e";}

.fl-discoveryTool-icon-increase-size:before       {content: "\e00b";}
.fl-discoveryTool-icon-increase-size:after        {content: "\e017";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-increase-size:before, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-increase-size:before, /* applied when focused and checked*/
.fl-discoveryTool-icon-increase-size:hover:before {content: "\e005";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-increase-size:after, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-increase-size:after, /* applied when focused and checked */
.fl-discoveryTool-icon-increase-size:hover:after  {content: "\e011";}

.fl-discoveryTool-icon-speak:before       {content: "\e008";}
.fl-discoveryTool-icon-speak:after        {content: "\e014";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-speak:before, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-speak:before, /* applied when focused and checked*/
.fl-discoveryTool-icon-speak:hover:before {content: "\e001";}
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:focus + label span.fl-discoveryTool-icon-speak:after, /* applied when keyboard focused */
.fl-uiOptions-discoveryTool .fl-uiOptions-panel input:checked:focus + label span.fl-discoveryTool-icon-speak:after, /* applied when focused and checked*/
.fl-discoveryTool-icon-speak:hover:after  {content: "\e00d";}

/* Theming for high and low contrast */

.fl-theme-bw .fl-icon-arrow, .fl-theme-bw .fl-icon-check, .fl-theme-bw .fl-discoveryTool-panel-icon,
.fl-theme-lgdg .fl-icon-arrow, .fl-theme-lgdg .fl-icon-check, .fl-theme-lgdg .fl-discoveryTool-panel-icon {
    font-family: 'DiscoveryToolIcons' !important;
}

.fl-theme-bw .fl-icon-arrow:after { color: #fff; }
.fl-theme-bw .fl-discoveryTool-panel-icon:before { color: #000; }
.fl-theme-bw .fl-discoveryTool-panel-icon:after { color: #fff; }

.fl-theme-lgdg .fl-icon-arrow:after { color: #555; }
.fl-theme-lgdg .fl-discoveryTool-panel-icon:before { color: #bdbdbb; }
.fl-theme-lgdg .fl-discoveryTool-panel-icon:after { color: #555; }

.fl-theme-bw .fl-uiOptions-panel .fl-icon-check,
.fl-theme-lgdg .fl-uiOptions-panel .fl-icon-check {
    border: 2px solid;
    position: relative;	
    top: -0.9em;    
}

.fl-theme-bw .fl-uiOptions input:focus + label,  
.fl-theme-lgdg .fl-uiOptions input:focus + label {
    outline: none;
    border: 0.2em solid #00AAFF;
}

.fl-theme-bw .fl-uiOptions-panel label:hover .fl-icon-text,
.fl-theme-bw .fl-uiOptions-panel input:focus ~ label .fl-icon-text,
.fl-theme-lgdg .fl-uiOptions-panel label:hover .fl-icon-text,
.fl-theme-lgdg .fl-uiOptions-panel input:focus ~ label .fl-icon-text  { text-shadow: none; }

